<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="edu.feicui.app.phone.activity.FileListActivity">

    <include layout="@layout/item_toolbar"/>
    <LinearLayout
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:gravity="center_vertical"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp">
        <TextView
            android:text="@string/fileList_fileCount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/txt_fileList_fileCount"
            android:textSize="20sp"
            android:textColor="@color/colorPrimaryDark"
            android:text="10个"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:text="@string/fileList_fileSpace"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/txt_fileList_fileSpace"
            android:textSize="20sp"
            android:textColor="@color/colorPrimaryDark"
            android:text="20mb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <ListView
        android:id="@+id/lst_fileList_content"
        android:layout_weight="8"
        android:layout_width="match_parent"
        android:layout_height="0dp"></ListView>
    <Button
        android:id="@+id/btn_fileList_delete"
        android:text="@string/delete_selectFile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>
